Tests/CarlTests/CompilerTests/negative/invalid-range.carl
automaton Test {
    world { neighborhood: Moore(1.5) }
    rules {}
}
